--- a/roles/k8s-prerequsites/tasks/main.yml
+++ b/roles/k8s-prerequsites/tasks/main.yml
@@ -11,14 +11,12 @@
         sudo swapoff -a
         sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
 
-- name: Create containerd config file
- file:
-   path: "/etc/modules-load.d/containerd.conf"
-   state: "touch"
+# - name: Create containerd config file
+#   file:
+#     path: "/etc/modules-load.d/containerd.conf"
+#     state: "touch"
 
-- name: Add conf for containerd
-  blockinfile:
-    path: "/etc/modules-load.d/containerd.conf"
-    block: |
-          overlay
-          br_netfilter
+- name: add config
+  copy:
+    src: containerd.conf
+    dest: /etc/modules-load.d/containerd.conf
