--- a/roles/k8s-prerequsites/tasks/main.yml
+++ b/roles/k8s-prerequsites/tasks/main.yml
@@ -6,10 +6,9 @@
     src: resolv.conf
     dest: /etc/resolv.conf
 
-- name: disable swap
-  shell: |
-        sudo swapoff -a
-        sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+- name: Disable swap
+  ansible.builtin.command: swapoff -a
+  when: ansible_swaptotal_mb > 0
 
 - name: add containerd config
   copy:
