--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 # Install HAproxy on debian11
+- name: Gather facts from db servers
+  ansible.builtin.setup:
+  delegate_to: "{{ item }}"
+  delegate_facts: true
+  loop: "{{ groups['masters'] }}"
 
 - name: Download and install haproxy
   apt:
