--- a/roles/haproxy/vars/main.yml
+++ b/roles/haproxy/vars/main.yml
@@ -1,5 +1,4 @@
-host_name: mona-master1
-host_ip: 37.32.27.235
-host_port: 6443
+
+kubernetes_api_port: 6443
 haproxy_ip: 37.32.26.124
 haproxy_port: 6443
